--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "name": "sonr-xmtp-bot",
   "version": "1.0.0",
   "type": "module",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js"
-  },
   "dependencies": {
-    "@xmtp/xmtp-js": "^11.0.0",
-    "dotenv": "^16.4.0",
+    "@xmtp/xmtp-js": "^11.6.3",
+    "ethers": "^6.11.1",
     "node-fetch": "^3.3.2"
   }
 }
