--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@xmtp/xmtp-js": "^11.6.3",
-    "ethers": "^6.11.1",
-    "node-fetch": "^3.3.2"
+    "@xmtp/xmtp-js": "^13.1.0",
+    "@xmtp/proto": "^3.0.0",
+    "@xmtp/content-type-text": "^3.0.0",
+    "ethers": "^6.11.1"
   }
 }
